inline.html finished

--- a/inline.html
+++ b/inline.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     
-    <p style="color: #66ffcc; font-size: 30px ">Thi is a paragraph</p>
+    <p style="color: #66ffcc; font-size: 45px; font-weight: 900 ">This  is a paragraph</p><!-- Inline style, styles only one specific HTML element-->
     
 </body>
 </html>
