selectors.html finished

--- a/selectors.html
+++ b/selectors.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Selectors</title>
+    <link href="CSS/style.css" rel="stylesheet">
+    
 </head>
 <body>
     
